Progress on updates for revision

--- a/HR_analysis_GPS_LC_newtags_2019-10-31.Rmd
+++ b/HR_analysis_GPS_LC_newtags_2019-10-31.Rmd
@@ -34,7 +34,7 @@ library(StreamMetabolism)
 
 # The date the first few chunks were run to find inside/outside, day/night, and split into 4-hr blocks. 
 run.date <- "2019-11-01"
-save.figure <- T
+save.figure <- F
 
 # Minimum number of relocations per individual to be included in HR analysis
 min_n <- 50
@@ -654,7 +654,7 @@ plotLSCV(pre.GPS.kd$kd.LSCV)
 
 ```
 
-Looking at the GPS data, referecne or optimum bandwidth is ~248 (see pre.GPS.kd\$kd.href@h), whereas the LSCV comes back with h = 27.5 (pre.GPS.kd\$kd.LSCV@h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. 
+Looking at the GPS data, referecne or optimum bandwidth is ~248 (see pre.GPS.kd\$kd.href@h), whereas the LSCV comes back with h = 30.1 (pre.GPS.kd\$kd.LSCV@h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. 
 
 Looking at these plots, multiplier = 0.4 may be the smallest value with a contiguous 95% UD.  This is found in pre.GPS.HR$h.1 below. 
 
@@ -699,7 +699,7 @@ if (save.figure)
 ```
 
 
-ARGOS data are not quite the same. 
+ARGOS data are not quite the same as GPS data. 
 
 Do the same for the post data - here we need to look at subsampling individuals. First, use all data.
 
@@ -798,7 +798,7 @@ if (save.figure)
 
 ```
 
-For the ARGOS data, h = 216.1 and the minimum muliplier is 0.7. 
+For the ARGOS data, h = 216.1 and the minimum muliplier is 0.75. (pre.ARGOS.HR.day$h.1) 
 
 
 For night:
@@ -829,7 +829,7 @@ if (save.figure)
          dpi = 600)
 ```
 
-multiplier = 0.55 may be good. See h.pre.night.1.
+multiplier = 0.55 may be good. See pre.GPS.HR.night$h.1.  
 
 
 ```{r}
@@ -879,7 +879,7 @@ if (save.figure)
          dpi = 600)
 ```
 
-multiplier = 0.45 may be good. See h.post.day.1. 
+multiplier = 0.5 may be good. See post.GPS.HR.day$h.1  
 
 
 ```{r}
@@ -943,8 +943,7 @@ if (save.figure)
          dpi = 600)
 ```
 
-See post.ARGOS.HR.night$h.1 
-Estimated h is 229.8 and the minimum multiplier of 0.85.
+Estimated h is 229.8 and the minimum multiplier of 0.85. See post.ARGOS.HR.night$h.1 
 
 Combine results together to compare pre and post UDs.  
 
@@ -978,8 +977,12 @@ UD.df <- data.frame(period = rep(c("pre", "pre", "pre", "post", "post", "post"),
                              post.ARGOS.HR.day$HR$area.95, 
                              post.ARGOS.HR.night$HR$area.95))
 
-```
+write.csv(UD.df,
+          file = paste0("data/UD_allIDs_", Sys.Date(), ".csv"), 
+          quote = FALSE,
+          row.names = FALSE)
 
+```
 
 
 Next individual-specific analyses. 
@@ -1101,6 +1104,7 @@ Bring in the body size information. This was done in deployment_table_Nov2019.R 
 126071 -> 12607107 7/24/2014
 21136/13183 -> 13183 This seems incorrect but it will be filtered out for now.
 
+NAs in sex column were replaced with Us. 
 ```{r}
 col.def <- cols(Turtle_ID = col_integer(),
                 Year_caught = col_integer(),
@@ -1400,6 +1404,33 @@ write.csv(dat.table, file = "data/IDvsUDs.csv",
 #   geom_point(aes(x = area.95.all.GPS,
 #                  y = area.95.all.ARGOS,
 #                  color = period))
+```
+
+
+Compare with other files created at different time:
+
+```{r}
+pre.GPS.day.byID <- readRDS("RData/pre_GPS_UD_day_byID.rds")
+pre.GPS.day.byID$area$period <- "pre"
+pre.GPS.day.byID$area$day1night2 <- 1
+pre.GPS.night.byID <- readRDS("RData/pre_GPS_UD_night_byID.rds")
+pre.GPS.night.byID$area$period <- "pre"
+pre.GPS.night.byID$area$day1night2 <- 2
+post.GPS.day.byID <- readRDS("RData/post_GPS_UD_day_byID.rds")
+post.GPS.day.byID$area$period <- "post"
+post.GPS.day.byID$area$day1night2 <- 1
+
+post.GPS.night.byID <- readRDS("RData/post_GPS_UD_night_byID.rds")
+post.GPS.night.byID$area$period <- "post"
+post.GPS.night.byID$area$day1night2 <- 2
+
+test.data <- rbind(pre.GPS.day.byID$area,
+                   pre.GPS.night.byID$area,
+                   post.GPS.day.byID$area,
+                   post.GPS.night.byID$area)
+
+
+
 ```
 
 
@@ -1758,6 +1789,11 @@ plot(p.h.pre.eachID)
 ```{r}
 
 p.h.post.eachID <- ggplot() + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = water.color,
+               color = "black",
+               alpha = 0.4) +
   geom_polygon(data = post.GPS.UD.byID$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
@@ -1771,11 +1807,12 @@ p.h.post.eachID <- ggplot() +
   coord_map() + facet_grid(. ~ ID) +
   facet_wrap( ~ ID, nrow = 3) + 
   labs(x = "", y = "")+ 
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) #+
-  #scale_x_continuous(breaks = seq(from = -117.18, to = -117.08, by = 0.02),
-  #                   limits = c(-117.20, -117.06)) +
-  #scale_y_continuous(breaks = seq(from = 32.57, to = 32.67, by = 0.02),
-  #                   limits = c(32.56, 32.68))
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) +
+   scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
+                     limits = c(-117.15, -117.09)) +
+  scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+                     limits = c(32.59, 32.65))
+
 plot(p.h.post.eachID)
 ```
 
@@ -1868,7 +1905,7 @@ if (save.figure){
 
 Now, I need to look at the effects of various things on the HR sizes.  Maybe good to remove everything else and start fresh here.
 
-The first comparison is the main one; pre vs. post, where using day and night data together.  I use only GPS data first. 
+The first comparison is the main one; pre vs. post, where using day and night data together.  I use only GPS data first. In this case, no mixed-effecs model is necessary. 
 
 ```{r}
 rm(list=ls())
@@ -1883,35 +1920,39 @@ dat.table %>%
                 n.day.all.GPS, n.night.all.GPS,
                 Sex, CCL_cm, 
                 period, area.50.all.GPS) %>%
+  mutate(period01 = ifelse(period == "pre", 0, 1)) %>% #-> table.area.50.GPS #%>%
   na.omit() -> table.area.50.GPS
 
-lm.fit.all.50 <- lm(formula = area.50.all.GPS ~ period + CCL_cm + n.days.GPS + n.relocations.all.GPS,
+lm.fit.all.50 <- lm(formula = area.50.all.GPS ~ period01 + CCL_cm + n.days.GPS + n.relocations.all.GPS,
                     data = table.area.50.GPS)
 
 summary(lm.fit.all.50)
 ```
 
-The model indicates no significant effects of the period (uncertainty is too big). Longer deployments result in larger UDs, whereas larger turtles tend to have smaller UDs. 
+The model indicates no significant effects of the period (uncertainty is too big), even though the coefficient is positive, indicating the increase in UD50. Longer deployments result in larger UD50s, whereas larger turtles tend to have smaller UD50s. 
 
-Second, I use day and night data as separate but drop the combined data.  To account for individuals, they are treated as random effects. There are only 6 individuals available fro this analysis.  
+Second, I use day and night data as separate but drop the combined data.  To account for individuals, they are treated as random effects. There are only 7 individuals available for this analysis.  Just because of this small sample issue, I remove CCL from the list of variables. 
 
 ```{r}
 dat.table %>%
   dplyr::select(ArgosID, n.days.GPS, n.relocations.all.GPS, n.day.all.GPS, n.night.all.GPS,
          Sex, CCL_cm, 
          period, area.50.night.GPS, area.50.day.GPS) %>%
-  na.omit() -> area.50.day.night.GPS
+  mutate(period01 = ifelse(period == "pre", 0, 1)) %>% #-> area.50.day.night.GPS #%>%
+  na.omit() -> area.50.day.night.GPS 
 
 area.50.day.night.GPS.long <- gather(area.50.day.night.GPS,
-                                     day_night, area, area.50.night.GPS, area.50.day.GPS) 
+                                     day_night, area, 
+                                     area.50.night.GPS, area.50.day.GPS) %>%
+  mutate(day1night2 = ifelse(day_night == "area.50.day.GPS", 1, 2))
 
-lmm.fit.all.50 <- lmer(formula = area ~ day_night + period + CCL_cm + (1|ArgosID),
+lmm.fit.all.50 <- lmer(formula = area ~ day1night2 + period01 + (1|ArgosID),
                       data = area.50.day.night.GPS.long)
 
 summary(lmm.fit.all.50)
 ```
 
-UDs are smaller during the night than the day and for the pre period than the post period. Effects of CCL is minimal in this analysis.  
+UD50s are smaller during the night than the day and for the pre period than the post period.   
 
 How about the 95% UDs?
 
@@ -1921,9 +1962,10 @@ dat.table %>%
                 n.day.all.GPS, n.night.all.GPS,
                 Sex, CCL_cm, 
                 period, area.95.all.GPS) %>%
+  mutate(period01 = ifelse(period == "pre", 0, 1)) %>%
   na.omit() -> table.area.95.GPS
 
-lm.fit.all.95 <- lm(formula = area.95.all.GPS ~ period + CCL_cm + n.days.GPS + n.relocations.all.GPS,
+lm.fit.all.95 <- lm(formula = area.95.all.GPS ~ period01 + CCL_cm + n.days.GPS + n.relocations.all.GPS,
                     data = table.area.95.GPS)
 
 summary(lm.fit.all.95)
@@ -1941,12 +1983,15 @@ dat.table %>%
   dplyr::select(ArgosID, n.days.GPS, n.relocations.all.GPS, n.day.all.GPS, n.night.all.GPS,
          Sex, CCL_cm, 
          period, area.95.night.GPS, area.95.day.GPS) %>%
+  mutate(period01 = ifelse(period == "pre", 0, 1)) %>%
   na.omit() -> area.95.day.night.GPS
 
 area.95.day.night.GPS.long <- gather(area.95.day.night.GPS,
-                                     day_night, area, area.95.night.GPS, area.95.day.GPS) 
+                                     day_night, area, 
+                                     area.95.night.GPS, area.95.day.GPS) %>%
+  mutate(day1night2 = ifelse(day_night == "area.95.day.GPS", 1, 2))
 
-lmm.fit.all.95 <- lmer(formula = area ~ day_night + period + CCL_cm + (1|ArgosID),
+lmm.fit.all.95 <- lmer(formula = area ~ day1night2 + period01 + (1|ArgosID),
                       data = area.95.day.night.GPS.long)
 
 summary(lmm.fit.all.95)
@@ -1957,6 +2002,18 @@ Nothing really comes out as significant effects because of large uncertainty.  U
 
 I think adding Argos data help this issue... To justify, we need to look at how adding Argos locations to GPS data doesn't change the results.
 
+Look at the difference between day and night
+```{r}
+area.50.day.night.GPS %>% 
+  mutate(dif.day.night = area.50.day.GPS - area.50.night.GPS,
+         period01 = ifelse(period == "pre", 0, 1)) -> dif.area.50.day.night.GPS
+
+lm.fit.dif.50 <- lm(formula = dif.day.night ~ period01 + CCL_cm,
+                    data = dif.area.50.day.night.GPS)
+
+summary(lm.fit.dif.50)
+
+```
 
 
 
